# wayfinder

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
data/actions/: checksum.desktop  compress-builtin.desktop  compress-file-roller.desktop  encrypt-seahorse.desktop  extract-here-ark.desktop  extract-here-bsdtar.desktop  extract-here-file-roller.desktop  extract-to-file-roller.desktop  gpg-decrypt.desktop  gpg-encrypt.desktop  gpg-verify.desktop  terminal-alacritty.desktop  terminal-foot.desktop  terminal-gnome.desktop  terminal-konsole.desktop
src/: lib.rs  main.rs  state.rs
src/actions/: mod.rs
src/app/: imp.rs  mod.rs
src/clipboard/: mod.rs
src/context_menu/: mod.rs
src/dbus/: mod.rs
src/file_model/: mod.rs
src/file_object/: imp.rs  mod.rs
src/file_ops/: mod.rs
src/navigation/: mod.rs
src/portal/: chooser.rs  dbus.rs  main.rs
src/properties/: mod.rs
src/search/: mod.rs
src/shortcuts/: mod.rs
src/sidebar/: imp.rs  mod.rs
src/views/: mod.rs
src/views/grid_view/: imp.rs  mod.rs
src/views/list_view/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
