[package]
name = "wayfinder"
version = "1.0.0"
edition = "2021"
description = "Accessible GTK4 file manager"
license = "GPL-3.0-or-later"

[dependencies]
gtk = { package = "gtk4", version = "0.9", features = ["v4_14"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
open = "5"
